# internal/interfaces/api/http/handlers/publisher_handler.go
@@ -126,3 +126,67 @@ func (h *PublisherHandler) Authenticate(w http.ResponseWriter, r *http.Request) 
 
 	w.WriteHeader(http.StatusOK)
 }
+
+// ValidatePostForAllAssignedSocialNetworks godoc
+// @Summary Validate post for all assigned social networks
+// @Description Validate post for all assigned social networks
+// @Tags publishers
+// @Accept json
+// @Produce json
+// @Param project_id path string true "Project ID"
+// @Param post_id path string true "Post ID"
+// @Success 200
+// @Failure 400 {object} errors.APIError "Bad request"
+// @Failure 500 {object} errors.APIError "Internal server error"
+// @Security ApiKeyAuth
+// @Router /publishers/{project_id}/{post_id}/validate [get]
+func (h *PublisherHandler) ValidatePostForAssignedSocialNetworks(w http.ResponseWriter, r *http.Request) {
+	postID := r.PathValue("post_id")
+	projectID := r.PathValue("project_id")
+
+	if postID == "" || projectID == "" {
+		e.WriteHttpError(w, e.NewValidationError("Invalid request", nil))
+		return
+	}
+
+	err := h.Service.ValidatePostForAssignedSocialNetworks(r.Context(), projectID, postID)
+	if err != nil {
+		e.WriteBusinessError(w, err, mapErrorToAPIError)
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
+}
+
+// ValidatePostForSocialNetwork godoc
+// @Summary Validate post for social network
+// @Description Validate post for social network
+// @Tags publishers
+// @Accept json
+// @Produce json
+// @Param project_id path string true "Project ID"
+// @Param post_id path string true "Post ID"
+// @Param social_network_id path string true "Social Network ID"
+// @Success 200
+// @Failure 400 {object} errors.APIError "Bad request"
+// @Failure 500 {object} errors.APIError "Internal server error"
+// @Security ApiKeyAuth
+// @Router /publishers/{project_id}/{post_id}/{social_network_id}/validate [get]
+func (h *PublisherHandler) ValidatePostForSocialNetwork(w http.ResponseWriter, r *http.Request) {
+	postID := r.PathValue("post_id")
+	socialNetworkID := r.PathValue("social_network_id")
+	projectID := r.PathValue("project_id")
+
+	if postID == "" || socialNetworkID == "" || projectID == "" {
+		e.WriteHttpError(w, e.NewValidationError("Invalid request", nil))
+		return
+	}
+
+	err := h.Service.ValidatePostForSocialNetwork(r.Context(), projectID, postID, socialNetworkID)
+	if err != nil {
+		e.WriteBusinessError(w, err, mapErrorToAPIError)
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
+}
